# code-Angular-FT

./: .gitignore  EXEMPLO_FLUXO.md  QUICKSTART.md  Qlora_plan.md  README.md  comparison_report.json  dados_2026.jsonl  pyproject.toml
.claude/: CHANGES_SUMMARY.md  FINE_TUNING_PLAN.md  IMPLEMENTATION_GUIDE.md  SETUP_INSTRUCTIONS.md  TOKEN_OPTIMIZATION.md  TRAINING_METRICS.md  stateless-munching-pixel.md  toasty-wishing-goblet.md
checkpoints/: README.md
checkpoints/checkpoint-3/: adapter_config.json  rng_state.pth  trainer_state.json
data/: boundary_examples.jsonl  comparison_report.json  comparison_report.md
data/datasets/: ad.component.ts  ambulance.component.ts  benefit.component.ts  call.component.ts  category.component.ts  device.component.ts  doctor.component.ts  driver.component.ts  employee.component.ts  expense.component.ts  financial-report.component.ts  fueling.component.ts  history.component.ts  hospital-shift.component.ts  impression.component.ts  insurance.component.ts  inventory.component.ts  lead.component.ts  maintenance.component.ts  part.component.ts  patient.component.ts  payment-method.component.ts  performance-evaluation.component.ts  platform.component.ts  progress.component.ts  sale.component.ts  sla.component.ts  src_app_components_account_company-settings_company-module_company-module.component.ts  src_app_components_account_group_group-user_group-user.component.ts  src_app_components_account_user_user-group_user-group.component.ts  src_app_components_account_user_user-item_user-item.component.ts  src_app_components_default_history_history.component.ts  src_app_components_default_main_menu_menu.component.ts  src_app_components_others_skill_skill-item_skill-item.component.ts  src_app_components_synthetic_bank-account.component.ts  src_app_components_synthetic_biometrics.component.ts  src_app_components_synthetic_budget.component.ts  src_app_components_synthetic_candidate.component.ts  (+29 more)
scripts/: 1_generate_dataset.py  2_train_and_infer.py  check_setup.py  collect_components.py  convert_dataset.py  export_model.py  full_pipeline.py  generate_dataset.py  interactive_chat.py  train_and_infer.py
src/: 1_generate_dataset.py  2_train_qlora.py  3_inference.py  config.py  list_models.py
(+94 files in other folders)
