[project]
name = "code-angular-ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "google-generativeai>=0.8.6",
    "groq>=1.1.2",
    "peft>=0.18.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "torch>=2.11.0",
    "transformers>=4.43.0,<4.50.0",
    "trl>=0.8.0,<1.0.0",
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
]
