[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-angular-ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.1.0",
    "bitsandbytes>=0.45.0",
    "datasets>=3.0.0,<4.0.0",
    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
    "matplotlib>=3.10.8",
    "peft>=0.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "torch>=2.5.0",
    "torchvision>=0.25.0",
    "transformers>=4.47.0",
    "trl>=0.11.0",
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
]

[project.scripts]
fpftech-generate = "scripts.dataset.generate_dataset:main"
fpftech-train = "scripts.train_and_infer:main"
fpftech-export = "scripts.tools.export_model:export_model"
fpftech-chat = "scripts.analyze_and_test.interactive_chat:start_chat"
fpftech-validate = "src.evaluation.validator:main"

[tool.setuptools]
packages = ["src", "src.utils", "src.preprocessing_dataset", "src.models", "src.training", "src.evaluation", "src.providers", "scripts"]
